--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>0.0.1-SNAPSHOT</version>
   
   <properties>
-		<cucumber.version>7.10.1</cucumber.version>
+		<cucumber.version>7.11.1</cucumber.version>
 	</properties>
 
   <dependencies>
@@ -24,11 +24,11 @@
     <scope>test</scope>
 </dependency>
 <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
 <dependency>
     <groupId>io.cucumber</groupId>
     <artifactId>cucumber-picocontainer</artifactId>
-    <version>${cucumber.version}</version>
-    <scope>test</scope>
+    <version>7.11.2</version>
 </dependency>
 
 
@@ -47,6 +47,14 @@
     <artifactId>selenium-java</artifactId>
     <version>4.9.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.9.1</version>
+</dependency>
+
 
 </dependencies>
 </project>
